--- a/index.Rmd
+++ b/index.Rmd
@@ -25,11 +25,12 @@ format:
 
 ```
 
-This file contains the data from the "Experimental Advanced Biochemistry I" course (Biochemistry Degree, [Universidad Autónoma de Madrid](https://www.uam.es)). Over the last years, a number of lecturers and professors from the [Biochemistry Department](https://www.bq.uam.es/Index.php) have participated in this course, as follows (in alphabetical order): Julián Aragonés, Juan J. Arredondo, Víctor Calvo, José G. Castaño, Alicia González-Martín, Benilde Jiménez, Marina Lasa, Óscar Martínez-Costa, Luis del Peso, Modesto Redrejo-Rodríguez, Ana I. Rojo, Alejandro Samhan-Arias, and Isabel Sánchez-Pérez.
+This file contains the data from the "Experimental Advanced Biochemistry I" course (Biochemistry Degree, [Universidad Autónoma de Madrid](https://www.uam.es)). It is a 6 ECTS practical course for 3rd year undergrad students. In this course, starting from of a simple signal transduction pathway and an experimental system, students design their own experimental program, carry out the experiments, draw conclusions and present the results. Over the last years, a number of lecturers and professors from the [Biochemistry Department](https://www.bq.uam.es/Index.php) have participated in this course, as follows (in alphabetical order): Julián Aragonés, Juan J. Arredondo, Víctor Calvo, José G. Castaño, Alicia González-Martín, Benilde Jiménez, Marina Lasa, Óscar Martínez-Costa, Luis del Peso, Modesto Redrejo-Rodríguez, Ana I. Rojo, Alejandro Samhan-Arias, and Isabel Sánchez-Pérez.
 
-The questionnaires were completed by the students in 2017-2022 directly on Moodle on the last day of each course. This is a preliminary summary of the data analysis. The GitHub [repo](https://github.com/mredrejo/bqexav) contains the original files of all analyses. This report only contains the data analysis and plots, without any results discussion. The companion manuscript will be available soon.
+The questionnaires were completed by the students in 2017-2022 directly on Moodle on the last day of each course. This is a preliminary summary of the data analysis. The GitHub [repo](https://github.com/mredrejo/bqexav) contains the original files of all analyzes. This report only contains the data analysis and plots, without any results discussion.
+We are presenting this project in the workshop [*Evolving molecular biosciences education*](https://www.eventsforce.net/biochemsoc/frontend/reg/thome.csp?pageID=82803&eventID=164) (UK Biochemical Society and FEBS joint event), with a [Poster](poster_may23.pdf). A full manuscript will be also available soon. 
 
-The data is made available under the Creative Common License (CC BY-NC-ND 3.0 ES). 
+All these data are made available under the Creative Common License ([CC BY-NC-ND 3.0 ES](https://creativecommons.org/licenses/by-nc-nd/4.0/)). 
 
 ::: {.callout-warning}
 ## Preliminary
